Google Tag Manager - Download IDs

--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,7 @@ a.github-link:hover {
 }
 
 #community a, #community a:hover {
-    color: #ccd46c;
+    color: #3CE540;
     font-weight: bold;
 }
 
