try marketo inline

--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,15 @@ a.github-link:hover {
     bottom:0;
 }
 
+#mktoForm_1479{
+
+}
+
+#mktoForm_1479 div{
+    display: inline;
+}
+
+
 #community a, #community a:hover {
     color: #3CE540;
     font-weight: bold;
