--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,8 @@ a.github-link:hover {
 
 #mktoForm_1479 div, #mktoForm_1479 form, #mktoForm_1479 input, #mktoForm_1479 span{
     display: inline;
+    margin: 0;
+    padding: 0;
 }
 
 
