--- a/css/style.css
+++ b/css/style.css
@@ -181,14 +181,19 @@ a.github-link:hover {
     bottom:0;
 }
 
-#mktoForm_1479{
-
-}
 
 #mktoForm_1479 div, #mktoForm_1479, #mktoForm_1479 input, #mktoForm_1479 span{
-    display: inline;
+    display: inline-flex;;
     margin: 0;
     padding: 0;
+}
+
+#mktoForm_1479 input{
+    padding: 5px;
+}
+
+#mktoForm_1479 label{
+    width: 0px;
 }
 
 
