--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,7 @@ a.github-link:hover {
 #mktoForm_1479 input{
     padding: 5px !important;
     height: 32px;
+    width: 220px !important;
 }
 
 #mktoForm_1479 .mktoAsterix{
