--- a/css/style.css
+++ b/css/style.css
@@ -501,3 +501,13 @@ p.subtitle a, p.subtitle a:hover, p.subtitle a:visited{
     text-decoration: underline !important;
 
 }
+
+.conan-center{
+    margin-left: 30px;
+}
+
+.conan-center span{
+    margin-left: 5px;
+    margin-top: 5px;
+    font-size: 0.9em;
+}
