Add Star Conan on Github to Social icons

--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,9 @@ footer a:hover,
     margin-left: 10px;
     margin-bottom: 5px;
 }
-
+.social-icons .github-star {
+    top: 5px;
+}
 
 #hero {
     color: #fff;
