--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ a.github-link:hover {
 #artifactory-ce-cta {
     padding: 8px 0;
     font-weight: 300;
-    border-bottom: 1px solid #218826;
+    background-color: #1D716B;
 }
 #artifactory-ce-cta .conan-graphic {
     width: 200px;
