--- a/css/_bs-tooltip.scss
+++ b/css/_bs-tooltip.scss
@@ -9,6 +9,7 @@ $arrow-bg-color: white;
     background: $tt-bg-color;
     color: $tt-text-color;
     border: 2px solid $tt-border-color;
+    max-width: 250px;
   }
   .arrow {
     width: 11px;
