--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -1,8 +1,8 @@
-$gray: #8B8B8B;
-$blue: #7BA7D3;
-$dark-blue: #2C4257;
-$green: #4CB74A;
-$bright-gray: #EAEBEE;
+$gray: #8b8b8b;
+$blue: #7ba7d3;
+$dark-blue: #2c4257;
+$green: #40be46;
+$bright-gray: #eaebee;
 $main-font: 'Open Sans', sans-serif;
 
 $xl: '1399.98px';
