--- a/css/style.scss
+++ b/css/style.scss
@@ -3,13 +3,17 @@
 @import 'bs-tooltip';
 
 @media screen and (min-width: $lg) {
-  .container, .container-lg, .container-md, .container-sm, .container-xl {
-      max-width: 1390px!important;
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm,
+  .container-xl {
+    max-width: 1390px !important;
   }
 }
 
 body {
-  font-family: $main-font!important;
+  font-family: $main-font !important;
   font-weight: 300;
 }
 
@@ -31,7 +35,7 @@ img {
 }
 
 .black {
-  color: #000!important;
+  color: #000 !important;
 }
 
 a {
@@ -56,7 +60,7 @@ h1 {
   font-size: 0.722rem; /* 13/18 */
   transition: all 0.32s ease;
   &:hover {
-    opacity: .75;
+    opacity: 0.75;
   }
   &.bg-blue {
     &:hover {
@@ -68,7 +72,7 @@ h1 {
 a.big-btn {
   padding: 0.556rem 1.78rem;
   display: inline-block;
-  color: #fff!important;
+  color: #fff !important;
 }
 
 .cta {
@@ -78,6 +82,7 @@ a.big-btn {
   font-size: 1.111rem; /* 20/18 */
   line-height: 1.33em;
   transition: all 0.32s ease;
+  font-weight: 400;
   &:hover {
     color: white;
   }
@@ -88,7 +93,6 @@ a.big-btn {
   }
 }
 
-
 .container {
   max-width: 100%;
 }
@@ -98,7 +102,7 @@ a.big-btn {
 }
 .blue-hover {
   &:hover {
-    color: $blue!important;
+    color: $blue !important;
   }
 }
 .bg-blue {
@@ -111,7 +115,7 @@ a.big-btn {
 
 .green-hover {
   &:hover {
-    color: $green!important;
+    color: $green !important;
   }
 }
 
@@ -168,7 +172,8 @@ section#hero {
 
 section.advantages {
   .adv-col {
-    &:first-child, &:nth-child(2) {
+    &:first-child,
+    &:nth-child(2) {
       border-right: 1px solid white;
       @media screen and (max-width: $sm) {
         border-right: 0;
@@ -327,7 +332,7 @@ section.contact-us {
       a {
         color: #000;
         transition: all 0.32s ease;
-        margin-top: -.5rem;
+        margin-top: -0.5rem;
         &:hover {
           color: $blue;
         }
@@ -358,7 +363,7 @@ section.contact-us {
       }
     }
     .form-submit {
-      input[type="submit"] {
+      input[type='submit'] {
         width: 190px;
         border: 0;
         margin-left: auto;
@@ -366,7 +371,6 @@ section.contact-us {
       }
     }
   }
-
 }
 
 footer#siteFooter {
@@ -405,7 +409,7 @@ footer#siteFooter {
           display: inline-block;
         }
       }
-      input:not([type="checkbox"]) {
+      input:not([type='checkbox']) {
         height: 48px;
         border-radius: 2px;
         &#footerEmail {
@@ -414,7 +418,7 @@ footer#siteFooter {
           background: white;
           padding-left: 15px;
         }
-        &[type="submit"] {
+        &[type='submit'] {
           padding: 10px 15px;
         }
       }
@@ -441,11 +445,11 @@ footer#siteFooter {
           left: -13px;
           transition: all 0.12s ease;
         }
-        [type=checkbox]:checked + span {
+        [type='checkbox']:checked + span {
           background: $green;
           border: 1px solid $green;
         }
-        [type=checkbox]:checked + span:before {
+        [type='checkbox']:checked + span:before {
           content: '\2714';
           position: absolute;
           top: -3px;
@@ -608,27 +612,32 @@ section#downloads {
 } //#downloads
 
 body.privacy-policy {
-  ol, ul {
+  ol,
+  ul {
     padding-left: 1.5em;
     margin-top: 10px;
   }
 }
 
 //resp and other stuff
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: rgba($gray, .5);
+::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  color: rgba($gray, 0.5);
   font-family: $main-font;
 }
-::-moz-placeholder { /* Firefox 19+ */
-  color: rgba($gray, .5);
+::-moz-placeholder {
+  /* Firefox 19+ */
+  color: rgba($gray, 0.5);
   font-family: $main-font;
 }
-:-ms-input-placeholder { /* IE 10+ */
-  color: rgba($gray, .5);
+:-ms-input-placeholder {
+  /* IE 10+ */
+  color: rgba($gray, 0.5);
   font-family: $main-font;
 }
-:-moz-placeholder { /* Firefox 18- */
-  color: rgba($gray, .5);
+:-moz-placeholder {
+  /* Firefox 18- */
+  color: rgba($gray, 0.5);
   font-family: $main-font;
 }
 
