--- a/css/style.scss
+++ b/css/style.scss
@@ -573,6 +573,9 @@ section#downloads {
           }
         }
       }
+      &.cn-copy {
+        font-family: monospace;
+      }
     }
   }
   a.green {
