--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,6 @@
 @import 'hamburger';
 @import 'vars';
 @import 'bs-tooltip';
-
 @media screen and (min-width: $lg) {
   .container,
   .container-lg,
@@ -45,7 +44,8 @@ a {
 }
 
 h1 {
-  font-size: 2.222rem; /* 40/18 */
+  font-size: 2.222rem;
+  /* 40/18 */
 }
 
 .btn {
@@ -56,12 +56,16 @@ h1 {
   line-height: 1.33em;
   margin-left: 5px;
   margin-right: 5px;
-  min-height: 2rem; /* 36/18 */
-  font-size: 0.722rem; /* 13/18 */
+  min-height: 2rem;
+  /* 36/18 */
+  font-size: 0.722rem;
+  /* 13/18 */
   transition: all 0.32s ease;
+
   &:hover {
     opacity: 0.75;
   }
+
   &.bg-blue {
     &:hover {
       color: #fff;
@@ -76,16 +80,20 @@ a.big-btn {
 }
 
 .cta {
-  height: 3.333rem; /* 60/18 */
+  height: 3.333rem;
+  /* 60/18 */
   padding: 16px 53px;
   display: inline-block;
-  font-size: 1.111rem; /* 20/18 */
+  font-size: 1.111rem;
+  /* 20/18 */
   line-height: 1.33em;
   transition: all 0.32s ease;
   font-weight: 400;
+
   &:hover {
     color: white;
   }
+
   &.bg-green {
     &:hover {
       background-color: #3fd63c;
@@ -100,11 +108,13 @@ a.big-btn {
 .blue {
   color: $blue;
 }
+
 .blue-hover {
   &:hover {
     color: $blue !important;
   }
 }
+
 .bg-blue {
   background-color: $blue;
 }
@@ -130,6 +140,7 @@ a.big-btn {
 .gray {
   color: $gray;
 }
+
 .bg-gray {
   background-color: $gray;
 }
@@ -137,6 +148,7 @@ a.big-btn {
 .dark-blue {
   color: $dark-blue;
 }
+
 .bg-dark-blue {
   background-color: $dark-blue;
 }
@@ -144,6 +156,7 @@ a.big-btn {
 .bright-gray {
   color: $bright-gray;
 }
+
 .bg-bright-gray {
   background-color: $bright-gray;
 }
@@ -152,20 +165,28 @@ a.big-btn {
   @include blue-gradient-bg;
 }
 
+header#masthead {
+  border-bottom: 1px solid $bright-gray;
+}
+
 section#hero {
   .hero-bg {
     top: 20px;
     left: 0;
+
     &.downloads-hero-bg {
       top: 150px;
     }
   }
+
   .hero-content {
     max-width: 616px;
     margin-left: auto;
     margin-right: auto;
+
     p {
-      font-size: 1.111rem; /* 20/18 */
+      font-size: 1.111rem;
+      /* 20/18 */
     }
   }
 }
@@ -181,10 +202,12 @@ section.advantages {
       }
     }
   }
+
   .advantage {
     max-width: 296px;
     margin-left: auto;
     margin-right: auto;
+
     .img {
       min-height: 101px;
       display: -webkit-flex;
@@ -193,17 +216,22 @@ section.advantages {
       align-items: center;
       justify-content: center;
     }
+
     h3 {
       font-size: 1.111rem;
     }
+
     p {
-      font-size: 0.833rem; /* 15/18 */
+      font-size: 0.833rem;
+      /* 15/18 */
     }
+
     .read-more-wrapper {
       .read-more-content {
         display: none;
       }
     }
+
     .read-more {
       span {
         display: inline-block;
@@ -212,6 +240,7 @@ section.advantages {
         top: 2px;
         transform: rotate(90deg);
       }
+
       &:hover {
         color: #fff;
       }
@@ -224,27 +253,37 @@ section.learn-more {
     top: -80px;
     right: 0;
   }
+
   h3 {
     font-weight: 700;
-    font-size: 1.111rem; /* 20/18 */
+    font-size: 1.111rem;
+    /* 20/18 */
     display: inline;
     top: -0.5em;
     left: 0;
     right: 0;
+
     span {
       padding: 10px;
     }
   }
+
   .lm-obj {
-    font-size: 1rem; /* 18/18 */
+    font-size: 1rem;
+    /* 18/18 */
     .content {
       border: 1px solid #000;
-      padding-top: 3.556rem; /* 64/18 */
-      padding-left: 2.222rem; /* 40/18 */
-      padding-right: 2.222rem; /* 40/18 */
-      padding-bottom: 2.222rem; /* 40/18 */
+      padding-top: 3.556rem;
+      /* 64/18 */
+      padding-left: 2.222rem;
+      /* 40/18 */
+      padding-right: 2.222rem;
+      /* 40/18 */
+      padding-bottom: 2.222rem;
+      /* 40/18 */
       a.big-btn {
         transition: all 0.32s ease;
+
         &:hover {
           background-color: #73b0ec;
         }
@@ -262,6 +301,7 @@ section.users {
     border-right: 1px solid black;
     border-bottom: 1px solid black;
     justify-content: center;
+
     .user-box {
       width: 20%;
       display: -webkit-flex;
@@ -292,13 +332,16 @@ section.testis {
   h2 {
     font-weight: 300;
   }
+
   .testi-cartousel-wrapper {
     position: relative;
     max-width: 646px;
     margin-left: auto;
     margin-right: auto;
+
     .testi {
       font-weight: 300;
+
       .quote {
         span.line {
           background: #fff;
@@ -307,12 +350,14 @@ section.testis {
         }
       }
     }
+
     .slick-track {
       display: -webkit-flex;
       display: -ms-flex;
       display: flex;
       align-items: center;
     }
+
     .cs-slick-nav {
       position: absolute;
       background-color: transparent;
@@ -322,10 +367,12 @@ section.testis {
       top: 0;
       bottom: 0;
       outline: 0 !important;
+
       &.cs-slick-right {
         transform: rotate(180deg);
         right: -50px;
       }
+
       &.cs-slick-left {
         left: -50px;
       }
@@ -334,77 +381,142 @@ section.testis {
 }
 
 section.contact-us {
-  .form-container {
-    position: relative;
-    z-index: 1;
-    .title-mail {
-      a {
-        color: #000;
-        transition: all 0.32s ease;
-        margin-top: -0.5rem;
-        &:hover {
-          color: $blue;
-        }
-      }
-    }
-  }
-  img.contact-bg {
-    left: -50px;
-    top: -200px;
-    z-index: 0;
-  }
-  form.cu-form {
-    max-width: 687px;
+  form#mktoForm_2684 {
+    width: 687px !important;
+    max-width: 100% !important;
     margin-left: auto;
     margin-right: auto;
-    .form-input {
-      padding-bottom: 10px;
+
+    .mktoButtonRow {
+      text-align: center;
+      width: 100%;
+      margin-left: auto !important;
+      margin-right: auto !important;
+      span.mktoButtonWrap.mktoSimple {
+        margin-left: auto !important;
+        margin-right: auto !important;
+      }
+    }
+
+    button[type="submit"] {
+      height: 57px;
+      padding-left: 15px;
+      padding-right: 15px;
+      width: 190px;
+      border: 0;
+      margin-left: auto;
+      margin-right: auto;
+      background: $green;
+      font-size: 19px;
+    }
+
+    .mktoFieldDescriptor.mktoFormCol {
+      width: 100%;
+
+      .mktoFieldWrap {
+        width: 100%;
+
+        > .mktoGutter.mktoHasWidth {
+          display: none !important;
+        }
+
+        input,
+        textarea {
+          width: 100% !important;
+          font: $main-font;
+        }
+
+        textarea {
+          padding-top: 17px;
+          padding-bottom: 10px;
+        }
+
+      }
+    }
+
+
+    .mktoFormRow {
       label {
         display: none;
       }
-      input {
+
+      input,
+      textarea {
         width: 100%;
         border-right: 2px;
         border: 1px solid $gray;
         height: 57px;
         padding-left: 15px;
         padding-right: 15px;
+        font-size: 18px;
+      }
+
+      .mktoOffset {
+        display: none !important;
       }
     }
-    .form-submit {
-      input[type='submit'] {
-        width: 190px;
-        border: 0;
-        margin-left: auto;
-        margin-right: auto;
+
+    .mktoFormRow:first-child {
+      background: red;
+      display: none !important;
+    }
+  }
+
+  .form-container {
+    position: relative;
+    z-index: 1;
+
+    .title-mail {
+      a {
+        color: #000;
+        transition: all 0.32s ease;
+        margin-top: -0.5rem;
+
+        &:hover {
+          color: $blue;
+        }
       }
     }
   }
+
+  img.contact-bg {
+    left: -50px;
+    top: -200px;
+    z-index: 0;
+  }
+
 }
+
 footer#siteFooter {
-  background-image: url('../img/footer-bg.png');
+  background-image: url("../img/footer-bg.png");
   background-position: bottom right;
   background-repeat: no-repeat;
   background-size: 24vw;
   @media screen and (max-width: 991px) {
     background-image: none;
   }
+
   .footer-left {
     border-right: 1px solid #000;
+
     .footer-menu {
       font-size: 16px;
+
       h4 {
         font-size: 16px;
       }
+
       ul {
         list-style: none;
         padding: 0;
         margin-bottom: 0;
+
         li {
           a {
             color: #000;
             transition: all 0.32s ease;
             font-weight: 400;
+
             &:hover {
               color: $dark-blue;
             }
@@ -413,36 +525,159 @@ footer#siteFooter {
       }
     }
   }
+
   .footer-right {
+
+    form#mktoForm_1479 {
+      padding: 0;
+      max-width: 100%;
+      display: -webkit-flex;
+      display: -ms-flex;
+      display: flex;
+      flex-wrap: wrap;
+
+      .mktoFormRow:nth-child(2) { //email
+        order: -1;
+        label[for="Email"], .mktoOffset, .mktoClear, .mktoGutter.mktoHasWidth {
+          display: none;
+        }
+        input {
+          width: 100%;
+          border-right: 2px;
+          border: 1px solid $gray;
+          height: 48px;
+          padding-left: 15px;
+          padding-right: 15px;
+          font-size: 18px;
+        }
+        input#Email {
+          max-width: 260px;
+        }
+      }
+      .mktoButtonRow {
+        order: -1;
+        span.mktoButtonWrap.mktoNative {
+          margin-left: 10px !important;
+          button.mktoButton {
+            height: 48px;
+            border: 0;
+            background: $green;
+            color: #fff;
+            font-size: 19px;
+            padding-left: 17px;
+            padding-right: 17px;
+          }
+        }
+      }
+      .mktoFormRow:nth-child(3) {
+        .mktoAsterix, .mktoGutter.mktoHasWidth, .mktoLogicalField.mktoCheckboxList.mktoHasWidth.mktoRequired.mktoValid label {
+          display: none;
+        }
+        .mktoFieldDescriptor.mktoFormCol {
+          .mktoOffset {display: none;}
+          .mktoFieldWrap.mktoRequiredField {
+            display: -webkit-flex;
+            display: -ms-flex;
+            display: flex;
+            flex-direction: row-reverse;
+            padding-top: 5px;
+
+            label.mktoLabel.mktoHasWidth {
+              a {
+                color: $blue !important;
+                font-weight: 400 !important;
+              }
+              font-weight: 300 !important;
+            }
+            .mktoLogicalField.mktoCheckboxList.mktoHasWidth.mktoRequired {
+              width: 25px !important;
+              padding-left: 0;
+              padding-top: 2.9px;
+
+
+              [type='checkbox'] {
+                opacity: 0;
+              }
+
+
+              [type='checkbox'] + label {
+                display: block !important;
+                box-sizing: border-box;
+                border-radius: 2px;
+                width: 18px;
+                height: 19px;
+                background: #fff;
+                border: 1px solid $gray;
+                margin: 0 !important;
+                padding: 0 !important;
+              }
+
+              [type='checkbox']:checked + label:before {
+                content: '\2714';
+                position: absolute;
+                top: 9px;
+                left: 4px;
+                z-index: 2;
+                font-size: 14px;
+                color: $green;
+              }
+            }
+          }
+        }
+        @media screen and (max-width: 768px) {
+          margin-top: 10px;
+          margin-bottom: 10px;
+        }
+      }
+
+
+      @media screen and (max-width: 1100px) {
+        flex-direction: column;
+        .mktoButtonRow {
+          order: 0;
+          span.mktoButtonWrap.mktoNative {
+            margin-left: 0 !important;
+          }
+        }
+      }
+    }
+
     form.footer-form {
       h3 {
         font-size: 20px;
       }
+
       label {
         display: none;
+
         &.show-label {
           display: inline-block;
         }
       }
+
       input:not([type='checkbox']) {
         height: 48px;
         border-radius: 2px;
+
         &#footerEmail {
           width: 261px;
           border: 1px solid gray;
           background: white;
           padding-left: 15px;
         }
+
         &[type='submit'] {
           padding: 10px 15px;
         }
       }
+
       .form-checkbox {
         position: relative;
         // left: -14px;
         abbr {
           display: none;
         }
+
         input {
           opacity: 0;
           position: relative;
@@ -450,6 +685,7 @@ footer#siteFooter {
           bottom: -7px;
           z-index: 3;
         }
+
         span {
           height: 19px;
           width: 18px;
@@ -460,10 +696,12 @@ footer#siteFooter {
           left: -13px;
           transition: all 0.12s ease;
         }
+
         [type='checkbox']:checked + span {
           background: $green;
           border: 1px solid $green;
         }
+
         [type='checkbox']:checked + span:before {
           content: '\2714';
           position: absolute;
@@ -475,6 +713,7 @@ footer#siteFooter {
         }
       }
     }
+
     ul.socials {
       list-style: none;
     }
@@ -486,26 +725,32 @@ section#downloads {
     font-size: 16px;
     font-weight: 400;
   }
+
   h2 {
     font-weight: 300;
     font-size: 25px;
   }
+
   h3 {
     font-size: 25px;
     font-weight: 600;
   }
+
   h4 {
     font-size: 17px;
     font-weight: bold;
   }
+
   h5 {
     font-size: 17px;
   }
+
   .downloads-item-wrapper {
     p {
       max-width: 438px;
     }
   }
+
   .installers {
     display: -webkit-flex;
     display: -ms-flex;
@@ -513,6 +758,7 @@ section#downloads {
     flex-wrap: wrap;
     margin-left: -2px;
     max-width: 350px;
+
     .cn-box {
       width: 75px;
       cursor: pointer;
@@ -533,14 +779,17 @@ section#downloads {
       line-height: 1;
       text-align: center;
       transition: all 0.2s ease;
+
       &.small {
         min-width: 68px;
         margin-top: 8px;
+
         img {
           margin-left: auto;
           margin-right: auto;
         }
       }
+
       &.big {
         width: 295px;
         max-width: 100%;
@@ -548,16 +797,20 @@ section#downloads {
           font-size: 16px;
         }
       }
+
       &.cn-options {
         position: relative;
+
         &.active {
           border: 2px solid $blue;
+
           .cn-dl-inner {
             z-index: 1;
             visibility: visible;
             opacity: 1;
           }
         }
+
         .cn-dl-inner {
           width: auto;
           z-index: -1;
@@ -574,9 +827,11 @@ section#downloads {
             left: unset;
             right: 0;
           }
+
           &:hover {
             border: 2px solid #e3e4e4;
           }
+
           a {
             transition: all 0.32s ease;
             color: #000;
@@ -585,12 +840,15 @@ section#downloads {
           }
         }
       }
+
       &.cn-copy {
         font-family: monospace;
       }
     }
+
     .cn-copy-multiline {
       position: relative;
+
       textarea {
         position: absolute;
         left: 0;
@@ -602,12 +860,14 @@ section#downloads {
       }
     }
   }
+
   a.green {
     &:hover {
       color: $green;
       text-decoration: underline;
     }
   }
+
   .blue-downloads {
     .cn-box {
       &:hover {
@@ -615,6 +875,7 @@ section#downloads {
       }
     }
   }
+
   .green-downloads {
     .cn-box {
       &:hover {
@@ -622,12 +883,15 @@ section#downloads {
       }
     }
   }
+
   .download-questions {
     h2 {
       font-size: 35px;
     }
+
     p {
       text-align: center;
+
       img {
         width: 1em;
         position: relative;
@@ -641,7 +905,8 @@ section#downloads {
       }
     }
   }
-} //#downloads
+}
+//#downloads
 
 body.privacy-policy {
   ol,
@@ -650,29 +915,30 @@ body.privacy-policy {
     margin-top: 10px;
   }
 }
-
 //resp and other stuff
 ::-webkit-input-placeholder {
   /* Chrome/Opera/Safari */
   color: rgba($gray, 0.5);
   font-family: $main-font;
 }
+
 ::-moz-placeholder {
   /* Firefox 19+ */
   color: rgba($gray, 0.5);
   font-family: $main-font;
 }
+
 :-ms-input-placeholder {
   /* IE 10+ */
   color: rgba($gray, 0.5);
   font-family: $main-font;
 }
+
 :-moz-placeholder {
   /* Firefox 18- */
   color: rgba($gray, 0.5);
   font-family: $main-font;
 }
-
 @media screen and (max-width: $md) {
   header {
     .hamburger {
@@ -691,31 +957,33 @@ body.privacy-policy {
     display: -ms-flex;
     display: flex;
     flex-direction: column;
-    padding: 30px 20px;
-    padding-bottom: 20px;
+    padding: 30px 20px 20px;
     background: white;
+
     &.is-visible {
       z-index: 9;
       opacity: 1;
       visibility: visible;
     }
+
     a.btn {
       margin-bottom: 10px;
     }
   }
 }
-
 @media screen and (max-width: $xl) {
   section#hero {
     .hero-bg {
       display: none;
     }
   }
+
   section.learn-more {
     img.lm-bg {
       display: none;
     }
   }
+
   section.contact-us {
     img.contact-bg {
       display: none;
